# SVperitus-dataset

./: .gitignore  LICENSE  MANIFIESTO_DE_ARQUITECTURA_DERECHOS_OBLIGACIONES_GARANTIAS_Y_FUNDAMENTOS_DEL_SISTEMA_VECTORIAL_SV_V1.md  README.md  README_AE_GD2_SV_INJERTO.md  index.html  requirements.txt  run_tests.py
.github/: kotlin-imm1-client-pages.yml
.github/workflows/: build-wasm.yml  kotlin-imm1-client-pages.yml  pages-ae-gd2-sv.yml
IMMUNO-1/: evaluate.py  generate_cases.py  generate_polygons.py  normative_engine.py  train_resnet.py
IMMUNO-1/config/: imm_n25.yaml
IMMUNO-2/: README.md
agentes/: README.md
agentes/inmunologia/: README.md  index.html
agentes/seguridad_estructural/: README.md  index.html
aplicaciones/agente_seguridad/: evidencia.html  index.html  r3.html
aplicaciones/cliente_kotlin/: README.md  index.html
aplicaciones/cuadernos/: README.md
aplicaciones/demo_wasm/: compositor.html  index.html  test_parity_wasm.html
aplicaciones/monitor_seguridad/: index.html  sucesos.html
aplicaciones/monitor_seguridad_ia/: index.html
common/: __init__.py  io_utils.py  polygons.py
comun/: README.md  gamma.py  io_utils.py  polygons.py
demo/: index.html
docs/: Documento7_IMMUNO-1.md  Documento8_Compilador_SVcustos-SVperitus.md
docs/calidad/: DEUDA_VIVA_MINIMA_SVPERITUS.csv  README.md  (+5 more)
dominios/: README.md
kotlin/: README.md
meta/: README.md  meta_engine.py  test.md
rust/: README.md  svperitus_playground_v03_final.rs
rust/imm1_normative/: Cargo.toml
rust/imm1_normative/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
(+148 files in other folders)
