[package]
name = "svperitus-wasm"
version = "0.1.0"
edition = "2021"
description = "SVperitus IMMUNO-1 normative engine — Rust compiled to WebAssembly"
license = "CC-BY-NC-ND-4.0"
authors = ["Juan Antonio Lloret Egea"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true

